# docs/swagger.json
@@ -36,14 +36,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/http.restockPriorityResponse"
+                                "$ref": "#/definitions/http.restockPrioritiesResponseDTO"
                             }
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     }
                 }
@@ -81,14 +81,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/http.productStockResponse"
+                                "$ref": "#/definitions/http.productStockResponseDTO"
                             }
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     }
                 }
@@ -112,7 +112,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/http.createProductStockRequest"
+                            "$ref": "#/definitions/http.createProductStockRequestDTO"
                         }
                     }
                 ],
@@ -120,19 +120,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/http.createResponse"
+                            "$ref": "#/definitions/http.createResponseDTO"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     }
                 }
@@ -177,20 +177,20 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/http.productStockResponse"
+                                "$ref": "#/definitions/http.productStockResponseDTO"
                             }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     }
                 }
@@ -219,25 +219,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/http.productStockResponse"
+                            "$ref": "#/definitions/http.productStockResponseDTO"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     }
                 }
@@ -268,7 +268,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/http.updateProductStockRequest"
+                            "$ref": "#/definitions/http.updateProductStockRequestDTO"
                         }
                     }
                 ],
@@ -279,19 +279,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     }
                 }
@@ -321,19 +321,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/http.errorResponse"
+                            "$ref": "#/definitions/http.errorResponseDTO"
                         }
                     }
                 }
@@ -341,14 +341,8 @@
         }
     },
     "definitions": {
-        "http.createProductStockRequest": {
+        "http.createProductStockRequestDTO": {
             "type": "object",
-            "required": [
-                "category",
-                "criticality_level",
-                "name",
-                "unit_cost"
-            ],
             "properties": {
                 "average_daily_sales": {
                     "type": "integer"
@@ -376,7 +370,7 @@
                 }
             }
         },
-        "http.createResponse": {
+        "http.createResponseDTO": {
             "type": "object",
             "properties": {
                 "id": {
@@ -385,7 +379,7 @@
                 }
             }
         },
-        "http.errorResponse": {
+        "http.errorResponseDTO": {
             "type": "object",
             "properties": {
                 "error": {
@@ -394,10 +388,10 @@
                 }
             }
         },
-        "http.productStockResponse": {
+        "http.productStockResponseDTO": {
             "type": "object",
             "properties": {
-                "average_daily_sales": {
+                "averageDailySales": {
                     "type": "integer",
                     "example": 10
                 },
@@ -405,11 +399,11 @@
                     "type": "string",
                     "example": "engine"
                 },
-                "criticality_level": {
+                "criticalityLevel": {
                     "type": "integer",
                     "example": 3
                 },
-                "current_stock": {
+                "currentStock": {
                     "type": "integer",
                     "example": 150
                 },
@@ -417,11 +411,11 @@
                     "type": "string",
                     "example": "550e8400-e29b-41d4-a716-446655440000"
                 },
-                "lead_time_days": {
+                "leadTimeDays": {
                     "type": "integer",
                     "example": 7
                 },
-                "minimum_stock": {
+                "minimumStock": {
                     "type": "integer",
                     "example": 50
                 },
@@ -429,37 +423,53 @@
                     "type": "string",
                     "example": "Engine Oil Filter"
                 },
-                "unit_cost": {
+                "unitCost": {
                     "type": "number",
                     "example": 25.5
                 }
             }
         },
-        "http.restockPriorityResponse": {
+        "http.restockPrioritiesResponseDTO": {
             "type": "object",
             "properties": {
-                "expected_consumption": {
-                    "type": "integer",
-                    "example": 70
-                },
-                "is_reposition_needed": {
-                    "type": "boolean",
-                    "example": true
-                },
-                "product_stock": {
-                    "$ref": "#/definitions/http.productStockResponse"
-                },
-                "projected_stock": {
-                    "type": "integer",
-                    "example": -20
-                },
-                "urgency_score": {
-                    "type": "integer",
-                    "example": 210
+                "priorities": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/http.restockPriorityResponseDTO"
+                    }
                 }
             }
         },
-        "http.updateProductStockRequest": {
+        "http.restockPriorityResponseDTO": {
+            "type": "object",
+            "properties": {
+                "currentStock": {
+                    "type": "integer",
+                    "example": 15
+                },
+                "minimumStock": {
+                    "type": "integer",
+                    "example": 20
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Engine Oil Filter"
+                },
+                "partId": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
+                "projectedStock": {
+                    "type": "integer",
+                    "example": -20
+                },
+                "urgencyScore": {
+                    "type": "number",
+                    "example": 45
+                }
+            }
+        },
+        "http.updateProductStockRequestDTO": {
             "type": "object",
             "properties": {
                 "average_daily_sales": {
